--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
-  "routes": [
-    { "src": "/", "dest": "/src/auth/Login.html" }
+  "root": "src",
+  "rewrites": [
+    { "source": "/", "destination": "/Login.html" }
   ]
 }
