--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
   "rewrites": [
-    { "source": "/", "destination": "/src/Login.html" }
+    { "source": "/", "destination": "/src/auth/Login.html" }
   ]
 }
